--- a/src/common/components/Button.module.css
+++ b/src/common/components/Button.module.css
@@ -1,11 +1,12 @@
 .button {
-  background-color: limegreen;
-  padding: 12px;
+  background-color: #4e148c;
+  padding: 12px 24px;
   border: 1px;
   border-radius: 2px;
   cursor: pointer;
   font-size: 16px;
   margin-top: 12px;
+  color: white;
 }
 
 .button:disabled {
@@ -13,5 +14,5 @@
 }
 
 .button:hover:not([disabled]) {
-  background-color: green;
+  background-color: #2c0735;
 }
