As I user, I want to select an answer, see correct answer and only answer once

--- a/src/features/quiz-page/QuestionDisplay.module.css
+++ b/src/features/quiz-page/QuestionDisplay.module.css
@@ -17,6 +17,11 @@
   background-color: rgb(216, 216, 216);
 }
 
+.answer:disabled {
+  cursor: not-allowed;
+  color: black;
+}
+
 .answerText {
   padding: 12px;
 }
@@ -29,9 +34,15 @@
 }
 
 .correctAnswer {
+  border: 2px solid green;
 }
 
 .wrongAnswer {
+  border: 2px solid red;
+}
+
+.selectedAnswer {
+  background-color: rgb(216, 216, 216);
 }
 
 .index {
